# ollama-agent-cli

./: ARCHITECTURE.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md  INDEX.md  LICENSE  QUICK_REFERENCE.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_TESTING_SUMMARY.md  VSCODE_TOOLS_INTEGRATION.md  VSCODE_TOOLS_QUICK_REFERENCE.md  VS_CODE_TOOLS_IMPLEMENTATION_SUMMARY.md  deploy.py  pyproject.toml  quick_start.sh  verify_vscode_tools.py
src/ollama_agent/: __init__.py  agent.py  cli.py  prompts.py  tools.py  tracing.py
tests/: __init__.py  test_example.py  test_tool_calling.py
